# iac

./: .gitignore  AGENTS.md  CHANGELOG.md  EXAMPLES.md  Makefile  OPERATIONS.md  README.md  VARIABLES.md  example.tf  main.tf
.github/: PULL_REQUEST_TEMPLATE_EXTERNALIZED_IAM.md  pull_request_template.md
.github/workflows/: test-externalized-iam.yml
.scratch/91-externalized-iam/: 02-analysis.md
deploy/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  TEMPLATES.md  USAGE.md  pyproject.toml  pytest.ini  tf_deploy.py
deploy/lib/: __init__.py  config.py  terraform.py  utils.py  validator.py
deploy/templates/: backend.tf.j2  external-iam.tf.j2  inline-iam.tf.j2  variables.tf.j2
deploy/tests/: __init__.py  test_config.py  test_terraform.py  test_utils.py
examples/: main.tf
examples/external-iam/: README.md
examples/inline-iam/: README.md
modules/cnames/: main.tf
modules/db/: main.tf  variables.tf
modules/iam/: README.md  main.tf  outputs.tf  variables.tf
modules/quilt/: locals.tf  main.tf  outputs.tf  variables.tf
modules/search/: main.tf  outputs.tf  (+1 more)
terraform/: README.md
test/: README.md  TEST_RESULTS.md  get-test-url.sh  run_all_tests.sh  run_validation.sh  setup-test-environment.sh  test-01-template-validation.sh  test-02-terraform-validation.sh  test-03-iam-module-integration.sh  test-04-full-integration.sh  test-05-update-scenarios.sh  test-06-comparison.sh  test-07-cleanup.sh  validate-names.py  validate_templates.py
tests/: .terraform.lock.hcl  .terraform.tfstate.lock.info  README.md  terraform.tfstate  test.yml  test_tags.tf
(+48 files in other folders)
